--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>giantmike weekly plays</title>
+<title>weekly plays</title>
 
 <link rel="icon" type="image/png" href="avatar.png">
 <link rel="stylesheet" href="bggplays.css">
@@ -17,6 +17,9 @@
 		<div class="small">
 			<input type="number" id="weeks_back" class="number_input" placeholder="0" min="-1" max="100" />weeks back
 		</div>
+		<div class="small">
+                        User: <input type="text" id="bgg_user" placeholder="tropical"/>
+                </div>
 		<button type="button" onclick="getPlays()" class="button inline">Get Plays</button>
 	</div>
 	
